--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
     "tailwindcss": "^3.4.13",
-    "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.13"
+    "vite": "^5.2.0"
   }
 }
